<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Odysee</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="downloadmanager_downloading_new_version">Downloading new version of Odysee Android</string>
    <string name="snackbar_new_version_available">There is a new version available for Odysee Android</string>
    <string name="snackbar_install_button">Install</string>
    <string name="home">Home</string>
    <string name="find_content">Find Content</string>
    <string name="your_content">Your Content</string>
    <string name="wallet">Wallet</string>
    <string name="following">Following</string>
    <string name="editors_choice">Editor\'s Choice</string>
    <string name="your_tags">Your Tags</string>
    <string name="all_content">All Content</string>
    <string name="change_default_channel">Change default channel</string>
    <string name="upload">Upload</string>
    <string name="go_live">Go Live</string>
    <string name="livestreams">Livestreams</string>
    <string name="channels">Channels</string>
    <string name="creator_settings">Creator Settings</string>
    <string name="library">Library</string>
    <string name="publishes">Publishes</string>
    <string name="new_publish">New Publish</string>
    <string name="rewards">Rewards</string>
    <string name="close">Close</string>
    <string name="invites">Invites</string>
    <string name="settings">Settings</string>
    <string name="app_settings">App Settings</string>
    <string name="about">About</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign out</string>
    <string name="use_magic_link">Use Magic Link via Email</string>
    <string name="sign_up_log_in">Sign Up or Log In</string>
    <string name="community_guidelines">Community Guidelines</string>
    <string name="help_and_support">Help &amp; Support</string>
    <string name="community_guidelines_url" translatable="false">lbry://@OdyseeHelp:b/Community-Guidelines:c</string>
    <string name="help_and_support_url" translatable="false">lbry://@OdyseeHelp:b</string>
    <string name="no_current_email">No current email. Please try to sign in again.</string>
    <string name="startup_failed">App startup failed. Please check your data connection and try again. If this problem persists, please email hello@lbry.com</string>
    <string name="no_claim_search_content">No content to display at this time. Please refine your selection or check back later.</string>
    <string name="welcome_to_lbry">Welcome to LBRY.</string>
    <string name="welcome_paragraph">LBRY is a community-controlled content platform where you can find and publish videos, music, books, and more.</string>
    <string name="welcome_tos">By continuing, I agree to the &lt;a href="https://lbry.com/termsofservice"&gt;Terms of Service&lt;/a&gt; and confirm I am over the age of 13.</string>
    <string name="welcome_please_wait">Please wait while we get some things ready…</string>
    <string name="use_odysee">Use Odysee</string>
    <string name="uri_placeholder">Search videos, music and more</string>
    <string name="cheese_category">Cheese</string>
    <string name="big_hits_category">Big Hits</string>
    <string name="gaming_category">Gaming</string>
    <string name="lab_category">Lab</string>
    <string name="tech_category">Tech</string>
    <string name="news_category">News</string>
    <string name="finance20_category">Finance 2.0</string>
    <string name="theuniverse_category">The Universe</string>
    <string name="movies_category">Movies</string>
    <string name="wildwest_category">Rabbit Hole</string>
    <string name="livestreaming_now">Livestreaming now</string>
    <string name="active_expand_button_accessibility">Button to expand or contract active livestreams</string>
    <string name="find_channels_to_follow">Find Channels to follow</string>
    <string name="discover">Discover</string>
    <string name="lbry_works_better">LBRY works better if you follow at least 5 creators you like. Sign in to show creators you follow if you already have an account.</string>
    <string name="select_five_subscriptions">Please select up to 5 creators to continue.</string>
    <string name="n_remaining">%1$d remaining…</string>
    <string name="done">Done</string>
    <string name="all">All</string>
    <string name="discover_channels">Discover new channels</string>
    <string name="scheduled_expand_button_accessibility">Button to expand or contract scheduled livestreams</string>
    <string name="anonymous">Anonymous</string>
    <string name="mute_channel">Mute channel</string>
    <string name="unmute_channel">Unmute channel</string>
    <string name="confirm_mute_channel_title">Mute %1$s?</string>
    <string name="confirm_mute_channel">Are you sure you want to mute this channel? You will no longer see any content nor comments from this channel if you do so.</string>
    <string name="channel_could_not_be_muted">An error occurred while trying to mute the channel. Please try again later.</string>
    <string name="channel_could_not_be_unmuted">An error occurred while trying to unmute the channel. Please try again later.</string>
    <string name="channel_muted">You have muted all content and comments from %1$s</string>
    <string name="channel_unmuted">You have unmuted all content and comments from %1$s</string>
    <string name="block_channel">Block channel</string>
    <string name="unblock_channel">Unblock channel</string>
    <string name="confirm_block_channel_title">Block %1$s?</string>
    <string name="confirm_block_channel">Do you want to block this channel from commenting on content published by %1$s?</string>
    <string name="channel_could_not_be_blocked">An error occurred while trying to block the channel. Please try again later.</string>
    <string name="channel_could_not_be_unblocked">An error occurred while trying to unblock the channel. Please try again later.</string>
    <string name="channel_blocked">You have blocked this channel from commenting on content by %1$s</string>
    <string name="channel_unblocked">You have unblocked this channel from commenting on content by %1$s</string>
    <string name="unblock">Unblock</string>
    <string name="blocked">Blocked</string>
    <string name="muted">Muted</string>
    <string name="moderator">Moderator</string>
    <string name="blocked_and_muted">Blocked &amp; Muted List</string>
    <string name="blocked_on_behalf_of">Blocked on behalf of</string>
    <string name="load_blocked_failed">The list of blocked channels could not be loaded at this time. Please try again later.</string>
    <string name="load_muted_failed">The list of muted channels could not be loaded at this time. Please try again later.</string>
    <string name="load_moderator_failed">The list of moderated channels could not be loaded at this time. Please try again later.</string>
    <string name="now_playing">Now Playing: Queue</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="watch_later">Watch Later</string>
    <string name="favorites">Favorites</string>
    <string name="add_to_lists">Add to Lists</string>
    <string name="added_to_list">Added to %1$s</string>
    <string name="could_not_add_to_list">Could not add content to %1$s. Please try again later.</string>
    <string name="could_not_save_list">The "%1$s" playlist could not be updated. Please try again later.</string>
    <string name="see_list">See list</string>
    <string name="create_a_list">Create a list</string>
    <string name="new_list">New list</string>
    <string name="enter_title">Please specify a title for the playlist.</string>
    <string name="remove_from_list">Remove from List</string>
    <string name="could_not_load_playlist">The playlist could not be loaded at this time. Please try again later.</string>
    <string name="playlist_position_tracker">%1$s • %2$s / %3$s</string>
    <string name="short_thousand">K</string>
    <string name="short_million">M</string>
    <string name="short_billion">B</string>
    <string name="user_not_live_yet">%1$s isn\'t live right now. Check back later to watch the stream.</string>
    <string name="live">Live</string>
    <string name="live_duration">LIVE</string>
    <string name="soon">Soon</string>
    <string name="tags">Tags</string>
    <string name="like_desc">Fire icon</string>
    <string name="dislike_desc">Slime icon</string>
    <string name="share">Share</string>
    <string name="repost">Repost</string>
    <string name="tip">Tip</string>
    <string name="user_interface">Content &amp; User interface</string>
    <string name="enable_background_playback">Enable background playback</string>
    <string name="enable_background_playback_pip_mode">Continue playing media in the background after closing picture-in-picture mode</string>
    <string name="enable_autoplay">Autoplay media files</string>
    <string name="wifi_default_quality">Default quality</string>
    <string name="mobile_default_quality">Default quality when using mobile data</string>
    <string name="playback_default_speed">Default playback speed</string>
    <string name="download_wifi_only">Only download content over Wi-Fi</string>
    <string name="enable_dark_mode">Enable dark theme</string>
    <string name="enable_autosearch">Perform search while typing</string>
    <string name="lbc">Credits</string>
    <string name="cancel">Cancel</string>
    <string name="min_deposit">0.001</string>
    <string name="continue_text">Continue</string>
    <string name="manual_reward_verification">Manual Reward Verification</string>
    <string name="reward_verification">Reward Verification</string>
    <string name="skip_queue_button_text">Skip for $%1$s</string>
    <string name="get_instantly_verified">You can get instantly verified to be able to participate in the rewards program using your Twitter account or skipping the manual verification queue.</string>
    <string name="twitter_verification">Twitter Verification</string>
    <string name="twitter_verification_desc">Get instantly verified using your Twitter account. Your Twitter email address must match the email that you provided and your account should be active.</string>
    <string name="twitter_verify">Verify with Twitter</string>
    <string name="phone_number_verification">Phone Number Verification</string>
    <string name="phone_number_verification_desc">Get instantly verified using your phone number.</string>
    <string name="phone_number_verify">Verify with phone number</string>
    <string name="skip_queue_verification">Skip the Queue</string>
    <string name="skip_queue_verification_desc">Skip the manual verification queue by paying a fee in order to start participating in the rewards program immediately.</string>
    <string name="skip_queue_manual_check">If you previously completed a purchase successfully and you still see this screen, please tap the verify purchase button below.</string>
    <string name="verify_purchase">Verify Purchase</string>
    <string name="request_to_be_verified">Please request to be verified on the &lt;a href=" https://chat.odysee.com"&gt;official Odysee Discord server&lt;/a&gt;. A manual review can take anywhere from several minutes to several days.</string>
    <string name="enjoy_free_content">Please enjoy free content in the meantime!</string>
    <string name="create_a_channel">Create a channel</string>
    <string name="channel_is_required">A channel is required to perform some actions</string>
    <string name="channel_name">Channel name</string>
    <string name="deposit">Deposit</string>
    <string name="deposit_remains_yours">The credits remains yours. It is a deposit to reserve the name and can be undone at any time.</string>
    <string name="create">Create</string>
</resources>