<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_to_queue"
        android:icon="@drawable/ic_add_to_queue"
        android:title="@string/add_to_queue"
        app:iconTint="@color/actionBarForeground"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add_to_watch_later"
        android:icon="@drawable/ic_watch_later"
        android:title="@string/watch_later"
        app:iconTint="@color/actionBarForeground"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add_to_favorites"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favorites"
        app:iconTint="@color/actionBarForeground"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add_to_lists"
        android:icon="@drawable/ic_add_to_list"
        android:title="@string/add_to_lists"
        app:iconTint="@color/actionBarForeground"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_remove_from_list"
        android:icon="@drawable/ic_add_to_list"
        android:title="@string/remove_from_list"
        app:iconTint="@color/actionBarForeground"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_block"
        android:icon="@drawable/ic_block"
        android:title="@string/block_channel"
        app:iconTint="@color/actionBarForeground"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_mute"
        android:icon="@drawable/ic_mute"
        android:title="@string/mute_channel"
        app:iconTint="@color/actionBarForeground"
        app:showAsAction="always" />
</menu>