<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/user_interface"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            app:key="com.odysee.app.preference.userinterface.BackgroundPlayback"
            app:defaultValue="true"
            app:title="@string/enable_background_playback"
            app:singleLineTitle="false"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            app:key="com.odysee.app.preference.userinterface.BackgroundPlaybackPIPMode"
            app:defaultValue="false"
            app:dependency="com.odysee.app.preference.userinterface.BackgroundPlayback"
            app:title="@string/enable_background_playback_pip_mode"
            app:singleLineTitle="false"
            app:iconSpaceReserved="false" />
        <com.takisoft.preferencex.SimpleMenuPreference
            app:key="com.odysee.app.preference.userinterface.AutoplayMedia"
            app:entries="@array/media_autoplay"
            app:entryValues="@array/media_autoplay_values"
            app:defaultValue="nothing_playing"
            app:title="@string/enable_autoplay"
            app:summary="%s"
            app:singleLineTitle="false"
            app:iconSpaceReserved="false" />
        <com.takisoft.preferencex.SimpleMenuPreference
            app:key="com.odysee.app.preference.userinterface.WifiDefaultQuality"
            app:entries="@array/available_qualities"
            app:entryValues="@array/available_qualities_values"
            app:defaultValue="0"
            app:title="@string/wifi_default_quality"
            app:singleLineTitle="false"
            app:summary="%s"
            app:iconSpaceReserved="false" />
        <com.takisoft.preferencex.SimpleMenuPreference
            app:key="com.odysee.app.preference.userinterface.MobileDefaultQuality"
            app:entries="@array/available_qualities"
            app:entryValues="@array/available_qualities_values"
            app:defaultValue="0"
            app:title="@string/mobile_default_quality"
            app:singleLineTitle="false"
            app:summary="%s"
            app:iconSpaceReserved="false" />
        <com.takisoft.preferencex.SimpleMenuPreference
            app:defaultValue="100"
            app:entries="@array/available_speeds"
            app:entryValues="@array/available_speeds_values"
            app:iconSpaceReserved="false"
            app:key="com.odysee.app.preference.userinterface.PlaybackDefaultSpeed"
            app:singleLineTitle="false"
            app:summary="%s"
            app:title="@string/playback_default_speed" />
        <SwitchPreferenceCompat
            app:key="com.odysee.app.preference.userinterface.DownloadWifiOnly"
            app:defaultValue="true"
            app:title="@string/download_wifi_only"
            app:singleLineTitle="false"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            app:key="com.odysee.app.preference.userinterface.DarkMode"
            app:title="@string/enable_dark_mode"
            app:singleLineTitle="false"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            app:key="com.odysee.app.preference.userinterface.Autosearch"
            app:title="@string/enable_autosearch"
            app:defaultValue="false"
            app:singleLineTitle="false"
            app:iconSpaceReserved="false" />
        <!--SwitchPreferenceCompat
            app:key="com.odysee.app.preference.userinterface.ShowMatureContent"
            app:title="@string/show_mature_content"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            app:key="com.odysee.app.preference.userinterface.UrlSuggestions"
            app:title="@string/show_url_suggestions"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />
        <EditTextPreference
            android:inputType="numberDecimal|numberSigned"
            app:key="com.odysee.app.preference.userinterface.MiniPlayerBottomMargin"
            app:title="@string/mini_player_bottom_spacing"
            app:defaultValue="4"
            app:iconSpaceReserved="false" /-->
    </PreferenceCategory>

    <!--PreferenceCategory
        android:title="@string/notifications"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            app:key="com.odysee.app.preference.notifications.Comments"
            app:title="@string/comments"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            app:key="com.odysee.app.preference.notifications.Subscriptions"
            app:title="@string/subscriptions"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            app:key="com.odysee.app.preference.notifications.Rewards"
            app:title="@string/rewards"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            app:key="com.odysee.app.preference.notifications.ContentInterests"
            app:title="@string/content_interests"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />
    </PreferenceCategory-->
</PreferenceScreen>