<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:id="@+id/blocked_muted_filter_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">
            <TextView
                android:id="@+id/blocked_muted_filter_blocked"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/inter"
                android:text="@string/blocked"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/blocked_muted_filter_muted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/blocked_muted_filter_blocked"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:fontFamily="@font/inter"
                android:text="@string/muted"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/blocked_muted_filter_moderator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/blocked_muted_filter_muted"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:fontFamily="@font/inter"
                android:text="@string/moderator" />
            <ProgressBar
                android:id="@+id/blocked_muted_loading"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:visibility="gone" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/blocked_muted_item_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.appcompat.widget.LinearLayoutCompat>